# CogScreen-AI

./: .env.example  .gitignore  AGENTS_v2.md  Dockerfile  README.md  agent.md  data.py  example.json  focus-game-spec.md  main.py  object-classification-game-spec.md  preview.txt  pyproject.toml  requirements.txt  result_api_response.json
.github/workflows/: main_cogscreen-api.yml
backend/app/: api.py  llm_judge.py  main.py  models.py  question_bank.py  reaction_time.py  reporting.py  scoring_rules.py  storage.py  transcribe.py
backend/app/instruments/: ad8.py  mmse.py  moca.py  spmsq.py
data/: AD8_questions.json  MMSE_questions.json  SPMSQ_questions.json  questions.sample.json
docs/: dementia-stage-criteria.md  project-structure.md
frontend/: app.js  classification-levels.js  exam.html  focus-annotator.css  focus-annotator.html  focus-annotator.js  focus-levels.js  game-focus.html  game-focus.js  game-logic.html  game-logic.js  game-memory.html  game-memory.js  game-reaction.html  game-reaction.js  game-sequence.html  game-sequence.js  game-utils.js  games.html  games.js  index.html  qa.html  results.html  results.js  styles.css  test.html
output/jupyter-notebook/: tailo-tts-download.ipynb
scripts/: clear_db.py  seed_mock_full_results.py  seed_mock_session.py  show_db.py  tailo_tts_download.py  test_report.ps1  test_report.sh  tts_questions.py
static/questions/: README.txt
tests/: test_llm_judge_schema.py  test_reaction_time.py  test_spmsq_scoring.py
